Fix align-with-profile_INSIDE preventing input resizing for multiline messages

--- a/message-input/FAST/align-with-profile_INSIDE.css
+++ b/message-input/FAST/align-with-profile_INSIDE.css
@@ -20,15 +20,18 @@
 }
 
 .visual-refresh .form_f75fb0 .attachButton__0923f {
-    height: calc(var(--custom-channel-textarea-text-area-height) + var(--custom-channel-textarea-height-change)) !important;
+    height: calc(var(--custom-channel-textarea-text-area-height) + var(--custom-channel-textarea-height-change));
+    min-height: calc(var(--custom-channel-textarea-text-area-height) + var(--custom-channel-textarea-height-change)) !important;
 }
 
 .visual-refresh .form_f75fb0 .buttons__74017 {
-    height: calc(var(--custom-channel-textarea-text-area-height) + var(--custom-channel-textarea-height-change)) !important;
+    height: calc(var(--custom-channel-textarea-text-area-height) + var(--custom-channel-textarea-height-change));
+    min-height: calc(var(--custom-channel-textarea-text-area-height) + var(--custom-channel-textarea-height-change)) !important;
 }
 
 .visual-refresh .form_f75fb0 .textArea__74017 {
-    height: calc(var(--custom-channel-textarea-text-area-height) + var(--custom-channel-textarea-height-change)) !important;
+    height: calc(var(--custom-channel-textarea-text-area-height) + var(--custom-channel-textarea-height-change));
+    min-height: calc(var(--custom-channel-textarea-text-area-height) + var(--custom-channel-textarea-height-change)) !important;
 }
 
 .visual-refresh .form_f75fb0 .channelTextArea_f75fb0 {
